# knowledge-agents

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  SPEC.md  pyproject.toml
.github/workflows/: ci.yaml  eval.yaml
configs/: components.yaml  default.yaml  eval.yaml  self_improvement.yaml
docs/: orchestrator-graph.md  spec-compliance-audit.md
evaluation/datasets/dci/: README.md  citation_audit.jsonl  lexical_bridge.jsonl  multihop.jsonl  paraphrastic.jsonl
evaluation/datasets/seed/: dev.jsonl  frozen.jsonl  rotating.jsonl
scripts/: eval_run.py  gen_seed_dataset.py  ingest.py  self_improve_run.py
src/common/: __init__.py  config.py  errors.py  schemas.py  settings.py  types.py
src/evaluation/: __init__.py
src/evaluation/datasets/: __init__.py  loader.py
src/evaluation/metrics/: __init__.py  base.py  e2e.py  operational.py  retrieval.py
src/evaluation/runners/: __init__.py  orchestrator_runner.py  runner.py
src/harness/: __init__.py
src/harness/budget/: __init__.py  tracker.py
src/harness/cache/: __init__.py  embedding_cache.py  prompt_cache.py  retrieval_cache.py
src/harness/citation/: __init__.py  base.py  enforcer.py
src/harness/compaction/: __init__.py  base.py  strategies.py
src/harness/context/: __init__.py  base.py  packer.py
src/harness/memory/: __init__.py  base.py  extraction.py  longterm.py  manager.py  session.py  working.py
src/harness/observability/: __init__.py  llm.py  logging.py  tracing.py
src/harness/orchestrator/: __init__.py  graph.py  state.py
src/harness/permissions/: __init__.py  base.py  gates.py  graph.py
src/harness/planning/: __init__.py  base.py  react.py  todo.py
src/harness/sandbox/: __init__.py  base.py  docker.py  executor.py  local.py  policy.py
src/harness/skills/: __init__.py  registry.py
src/harness/subagents/: __init__.py  base.py  orchestrator_agent.py  runner.py
src/knowledge_index/: __init__.py  pipeline.py
src/knowledge_index/chunking/: __init__.py  base.py  chunkers.py
src/knowledge_index/dci/: __init__.py  base.py  protocol.py  sandbox.py  (+1 more)
src/self_improvement/: __init__.py  integration.py
tests/integration/: test_compaction.py  test_eval_e2e.py  test_phase1_e2e.py  test_phase2_acceptance.py  test_phase4_acceptance.py  test_phase5_acceptance.py  test_smoke.py
tests/redteam/: conftest.py  test_acl_cross_boundary.py  test_acl_filter_injection.py  test_dci_probes.py  test_pii_exfiltration.py  test_prompt_injection.py
tests/unit/: test_budget.py  test_budget_guard.py  test_cache.py  test_chunking.py  test_citation.py  test_config.py  test_context_packer.py  test_embedding.py  test_enrichment.py  test_eval_datasets.py  test_eval_runner.py  test_evolutionary.py  test_heuristic_router.py  test_indexing.py  test_ingestion.py  test_ledger.py  test_memory.py  test_metrics.py  test_observability.py  test_orchestrator.py  test_permissions.py  test_pipeline.py  test_planner.py  test_planning.py  test_registry.py  test_reviewer.py  test_router.py  test_sandbox.py  test_schemas.py  test_settings.py  test_skills.py  test_subagents.py  test_types_and_errors.py
(+173 files in other folders)
