[project]
name = "knowledge-agent"
version = "0.1.0"
description = "Production-grade knowledge agent harness (RAG + agentic loop + self-improvement)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }

# Core runtime dependencies. Versions pinned per SPEC §3 / ka-1a1.
# LangGraph's sqlite checkpointer moved to its own package (SPEC §3, line 84):
# import via `from langgraph.checkpoint.sqlite import SqliteSaver` with BOTH installed.
dependencies = [
    "langgraph>=0.2",
    "langgraph-checkpoint-sqlite>=2.0",
    "aiosqlite>=0.20",  # async checkpointer backend for the orchestrator (SPEC §6.1)
    "langchain>=0.3",
    "langchain-anthropic>=0.3",
    "langchain-voyageai>=0.1",
    "qdrant-client>=1.10",
    "fastembed>=0.4",
    "cohere>=5.0",
    "pydantic>=2",
    "pydantic-settings>=2",
    "hydra-core>=1.3",
    "structlog>=24.0",
    "opentelemetry-sdk>=1.27",
]

[project.optional-dependencies]
# Heavier eval/test deps kept separate so core `uv sync` stays lean.
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
    "mypy>=1.11",
]
eval = [
    "ragas>=0.2",
]
# Ephemeral-container tool sandbox (SPEC §6.7). Imported lazily by
# harness.sandbox.docker so the core install and unit tests (which use the
# in-process LocalSandbox) need neither the SDK nor a running daemon.
sandbox = [
    "docker>=7.0",
]
# Heavy parsers + the OpenAI fallback SDK. Imported lazily by the ingestion and
# embedding layers (SPEC §7.1, §7.4) so the core install and unit tests don't
# need them; install when ingesting real PDFs/DOCX/HTML.
ingest = [
    "pymupdf4llm>=0.0.17",
    "pymupdf>=1.24",
    "trafilatura>=1.12",
    "python-docx>=1.1",
    "openai>=1.40",
]
# GraphRAG stores (SPEC §7.7). The dev/eval path uses the pure-stdlib
# InMemoryGraphStore (no extra needed); install this for the networkx graph-algo
# view or the Neo4j prod backend.
graph = [
    "networkx>=3.0",
    "neo4j>=5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# src-layout: top-level packages live under src/ but import as `common`, `harness`, etc.
# Acceptance criterion (ka-1a1): `from common.schemas import Chunk` must work.
[tool.hatch.build.targets.wheel]
packages = [
    "src/common",
    "src/harness",
    "src/knowledge_index",
    "src/self_improvement",
    "src/evaluation",
]

[tool.uv]
# Install the project itself (editable) into the synced environment.
package = true

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]
ignore = ["E501"]  # line length handled by formatter

[tool.mypy]
python_version = "3.11"
mypy_path = "src"
packages = ["common", "harness"]
ignore_missing_imports = true
warn_unused_ignores = true
no_implicit_optional = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]
markers = [
    "integration: requires external services (qdrant, network)",
]
